glx/testdata/invalid/custom-vocab-edge-cases/citations/citation-custom.glx
citations:
  citation-custom:
    source: source-custom
    quality: 99


